--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jxml-react",
   "version": "1.0.0",
   "description": "Render react view from Yaml file",
+  "repository": "etamity/jxml-react",
   "main": "dist/bundle.js",
   "module": "src/index.js",
   "files": [
