--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "ui"
   ],
   "exports": {
-    "./loader": "./dist/loader.js",
-    "./": "./dist/bundle.js"
+    "./loader": "./dist/loader.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -48,7 +47,6 @@
     "connected-react-router": "^6.9.1",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
-    "esm": "^3.2.25",
     "history": "^4.10.1",
     "html-webpack-plugin": "^5.3.1",
     "javascript-stringify": "^2.1.0",
