--- a/package.json
+++ b/package.json
@@ -84,21 +84,23 @@
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0",
-    "js-yaml": "^4.1.0",
-    "js-yaml-js-types": "^1.0.0",
-    "yaml-loader": "^0.6.0",
-    "yaml": "^1.10.2",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@material-ui/core": "^4.11.4",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "antd": "^4.16.2",
     "chart.js": "2.9.4",
-    "immer": "^9.0.2",
-    "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "immer": "^9.0.2"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0",
+    "js-yaml-js-types": "^1.0.0",
+    "yaml-loader": "^0.6.0",
+    "yaml": "^1.10.2",
+    "react": "^17.0.2"
   },
   "peerDependencies": {
     "react": "*",
