--- a/package.json
+++ b/package.json
@@ -39,21 +39,28 @@
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.16",
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@material-ui/core": "^4.11.4",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
     "@monaco-editor/react": "^4.1.3",
+    "@popperjs/core": "2.9.1",
     "@rematch/core": "^2.0.1",
     "@rematch/immer": "^2.0.1",
     "@rematch/loading": "^2.0.1",
+    "@tailwindcss/forms": "0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "@webpack-cli/generators": "^2.2.0",
+    "antd": "^4.16.2",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
+    "chart.js": "2.9.4",
     "connected-react-router": "^6.9.1",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
     "history": "^4.10.1",
     "html-webpack-plugin": "^5.3.1",
+    "immer": "^9.0.2",
     "javascript-stringify": "^2.1.0",
     "loader-utils": "^2.0.0",
     "lodash": "^4.17.21",
@@ -62,13 +69,17 @@
     "monaco-editor": "^0.24.0",
     "path-browserify": "^1.0.1",
     "postcss": "^7.0.35",
+    "postcss-import": "^14.0.2",
     "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.1",
     "raw-loader": "^4.0.2",
+    "react-content-loader": "^6.0.3",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "5.2.0",
+    "redux": "^4.1.0",
     "remark-emoji": "^2.2.0",
     "remark-frontmatter": "^3.0.0",
     "remark-images": "^2.0.0",
@@ -82,17 +93,7 @@
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0",
-    "@fortawesome/fontawesome-free": "5.15.3",
-    "@material-ui/core": "^4.11.4",
-    "@popperjs/core": "2.9.1",
-    "@tailwindcss/forms": "0.2.1",
-    "antd": "^4.16.2",
-    "chart.js": "2.9.4",
-    "react-content-loader": "^6.0.3",
-    "react-dom": "^17.0.2",
-    "redux": "^4.1.0",
-    "immer": "^9.0.2"
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "js-yaml": "^4.1.0",
