--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.16",
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@mapbox/rehype-prism": "^0.6.0",
     "@material-ui/core": "^4.11.4",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
@@ -48,13 +49,11 @@
     "@rematch/core": "^2.0.1",
     "@rematch/immer": "^2.0.1",
     "@rematch/loading": "^2.0.1",
-    "@tailwindcss/forms": "0.2.1",
-    "@tailwindcss/typography": "^0.4.1",
     "@webpack-cli/generators": "^2.2.0",
     "antd": "^4.16.2",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
-    "chart.js": "2.9.4",
+    "bootstrap": "^5.0.1",
     "connected-react-router": "^6.9.1",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
@@ -67,8 +66,7 @@
     "microbundle": "^0.13.2",
     "mini-css-extract-plugin": "^1.6.0",
     "monaco-editor": "^0.24.0",
-    "path-browserify": "^1.0.1",
-    "postcss": "^7.0.35",
+    "postcss": "^8.3.0",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.7.0",
@@ -84,12 +82,10 @@
     "remark-frontmatter": "^3.0.0",
     "remark-images": "^2.0.0",
     "remark-mdx-frontmatter": "^1.0.1",
+    "sass": "^1.34.1",
+    "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "styled-components": "^5.3.0",
-    "stylus": "^0.54.8",
-    "stylus-loader": "^6.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
-    "vm-browserify": "^1.1.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
