--- a/docs/src/examples/functional-demo.raw.yml
+++ b/docs/src/examples/functional-demo.raw.yml
@@ -3,15 +3,15 @@
 version: 1.0
 
 remote:
-#   Default:
-#     url: '/antd/remoteEntry.js'
-#     scope: 'antd'
-#   Mui:
-#     url: '/material/remoteEntry.js'
-#     scope: 'material'
-#   Antd:
-#     url: '/antd/remoteEntry.js'
-#     scope: 'antd'
+  Default:
+    url: '/antd/remoteEntry.js'
+    scope: 'antd'
+  Mui:
+    url: '/material/remoteEntry.js'
+    scope: 'material'
+  Antd:
+    url: '/antd/remoteEntry.js'
+    scope: 'antd'
 state:
   buttons:
     - label: Material UI 0
