--- a/docs/src/examples/remote-demo.raw.yml
+++ b/docs/src/examples/remote-demo.raw.yml
@@ -3,15 +3,16 @@
 version: 1.0
 
 remote:
-  # Default:
-  #   url: '/antd/remoteEntry.js'
-  #   scope: 'antd'
-  # Mui:
-  #   url: '/material/remoteEntry.js'
-  #   scope: 'material'
-  # Antd:
-  #   url: '/antd/remoteEntry.js'
-  #   scope: 'antd'
+  Default:
+    url: '/antd/remoteEntry.js'
+    scope: 'antd'
+  Mui:
+    url: '/material/remoteEntry.js'
+    scope: 'material'
+  Antd:
+    url: '/antd/remoteEntry.js'
+    scope: 'antd'
+
 state:
   title: Antd UI Button
 
