--- a/docSrc/src/examples/empty.raw.yml
+++ b/docSrc/src/examples/empty.raw.yml
@@ -1,25 +1,5 @@
 ---
 version: 1.0
 
-state:
-  pageTitle: Page title
-
-props:
-  title: Default Button
-
 render:
-  H1: this.state.pageTitle
-  Button:
-    style:
-      background: blue
-      color: white
-      padding: 10px
-    children: this.props.title
-    onClick: |
-      () => {
-          this.setState(state=> {
-              state.pageTitle = 'Hello World!'
-          })
-      }
-  JxmlView:
-    url: https://raw.githubusercontent.com/etamity/jxml-react/master/docSrc/src/examples/micro-frontend.raw.yml
+  H1: this is H1
