--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.1",
+    "ramda": "^0.27.1",
     "raw-loader": "^4.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
