--- a/docSrc/src/examples/form.raw.yml
+++ b/docSrc/src/examples/form.raw.yml
@@ -26,7 +26,7 @@ define:
 render:
   Form:
     className: grid grid-cols-1 gap-6
-    onSubmit: |
+    onSubmit: !!js |
       (e) => {
         e.preventDefault();
         console.log(e);
@@ -39,7 +39,7 @@ render:
       Input_name:
         className: mt-1 block w-full
         type: text
-        defaultValue: this.state.name
+        defaultValue: !!js this.state.name
     Label_email:
       className: block
       Span:
@@ -48,11 +48,11 @@ render:
       Input_name:
         className: mt-1 block w-full
         type: text
-        defaultValue: this.state.email
+        defaultValue: !!js this.state.email
     Label_gender:
       Select:
         type: select
-        defaultValue: this.state.gender
+        defaultValue: !!js this.state.gender
         Option_1:
           value: male
           children: male
@@ -66,7 +66,7 @@ render:
         children: Comment
       Textarea_name:
         className: form-textarea mt-1 block w-full h-24
-        defaultValue: this.state.comment
+        defaultValue: !!js this.state.comment
     Button:
       className: bg-red-300 p-2 border
       children: Submit
