--- a/docSrc/src/examples/jxmlview.nest.raw.yml
+++ b/docSrc/src/examples/jxmlview.nest.raw.yml
@@ -1,5 +1,11 @@
 version: 1.0
 
+state:
+  pageTitle: Page title
+
+props:
+  title: Default Button
+
 render:
-  JxmlView:
+  JXComponent.JxmlView:
     url: https://raw.githubusercontent.com/etamity/jxml-react/master/docSrc/src/examples/jxmlview.raw.yml
