--- a/package.json
+++ b/package.json
@@ -94,11 +94,11 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "esprima": "^4.0.1",
     "js-yaml": "^4.1.0",
-    "js-yaml-js-types": "^1.0.0",
-    "yaml-loader": "^0.6.0",
+    "react": "^17.0.2",
     "yaml": "^1.10.2",
-    "react": "^17.0.2"
+    "yaml-loader": "^0.6.0"
   },
   "peerDependencies": {
     "react": "*",
