--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     ".": "./dist/jxml-react.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "microbundle --define process.env.NODE_ENV=production --jsx React.createElement --output dist",
     "serve": "webpack serve --config docSrc/webpack.config.js",
     "build:docs": "webpack --mode=production --node-env=production --config docSrc/webpack.config.js",
     "build:modules": "webpack --config docSrc/webpack.module.config.js --mode=production --node-env=production",
-    "publish:bundle": "npm run build && npm version patch && npm publish"
+    "publish:bundle": "npm run build && npm run test && npm version patch && npm publish"
   },
   "author": "Joey.Etamity",
   "license": "MIT",
@@ -62,6 +62,7 @@
     "html-webpack-plugin": "^5.3.1",
     "immer": "^9.0.2",
     "javascript-stringify": "^2.1.0",
+    "jest": "^27.0.4",
     "loader-utils": "^2.0.0",
     "lodash": "^4.17.21",
     "microbundle": "^0.13.2",
